[package]
name = "heaven"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
actix-web = "4.8.0"
actix-files = "0.6.6"
pnet = "0.35.0"
notify = "6.1.1"
