[package]
name = "heaven"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to manage your heaven."
build = "build.rs"

[package.metadata.bundle]
icon = ["res/icon.png"]


[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
actix-web = "4.8.0"
actix-files = "0.6.6"
notify = "6.1.1"
